# omelet-data-gen-python

./: .gitignore  Readme.md  apiRequest.py  getAddressName.py  index.py  main.py  makeCsv.py  models.py  pyproject.toml
docker/: docker-compose.yml
kakaoAPI/: interface.py
output/csv/: CU_서울특별시_강남구.csv  CU_서울특별시_강동구.csv  CU_서울특별시_강북구.csv  CU_서울특별시_강서구.csv  CU_서울특별시_관악구.csv  CU_서울특별시_광진구.csv  CU_서울특별시_구로구.csv  CU_서울특별시_금천구.csv  CU_서울특별시_노원구.csv  CU_서울특별시_도봉구.csv  CU_서울특별시_동대문구.csv  CU_서울특별시_동작구.csv  CU_서울특별시_마포구.csv  CU_서울특별시_서대문구.csv  CU_서울특별시_서초구.csv  CU_서울특별시_성동구.csv  CU_서울특별시_성북구.csv  CU_서울특별시_송파구.csv  CU_서울특별시_양천구.csv  CU_서울특별시_영등포구.csv  CU_서울특별시_용산구.csv  CU_서울특별시_은평구.csv  CU_서울특별시_종로구.csv  CU_서울특별시_중구.csv  CU_서울특별시_중랑구.csv  GS_서울특별시_강남구.csv  GS_서울특별시_강동구.csv  GS_서울특별시_강북구.csv  GS_서울특별시_강서구.csv  GS_서울특별시_관악구.csv  GS_서울특별시_광진구.csv  GS_서울특별시_구로구.csv  GS_서울특별시_금천구.csv  GS_서울특별시_노원구.csv  GS_서울특별시_도봉구.csv  GS_서울특별시_동대문구.csv  GS_서울특별시_동작구.csv  GS_서울특별시_마포구.csv  GS_서울특별시_서대문구.csv  GS_서울특별시_서초구.csv  (+56 more)
output/xlsx/: CU_서울특별시_강남구.xlsx  CU_서울특별시_강동구.xlsx  CU_서울특별시_강북구.xlsx  CU_서울특별시_강서구.xlsx  CU_서울특별시_관악구.xlsx  CU_서울특별시_광진구.xlsx  CU_서울특별시_구로구.xlsx  CU_서울특별시_금천구.xlsx  CU_서울특별시_노원구.xlsx  CU_서울특별시_도봉구.xlsx  CU_서울특별시_동대문구.xlsx  CU_서울특별시_동작구.xlsx  CU_서울특별시_마포구.xlsx  CU_서울특별시_서대문구.xlsx  CU_서울특별시_서초구.xlsx  CU_서울특별시_성동구.xlsx  CU_서울특별시_성북구.xlsx  CU_서울특별시_송파구.xlsx  CU_서울특별시_양천구.xlsx  CU_서울특별시_영등포구.xlsx  CU_서울특별시_용산구.xlsx  CU_서울특별시_은평구.xlsx  CU_서울특별시_종로구.xlsx  CU_서울특별시_중구.xlsx  CU_서울특별시_중랑구.xlsx  GS_서울특별시_강남구.xlsx  GS_서울특별시_강동구.xlsx  GS_서울특별시_강북구.xlsx  GS_서울특별시_강서구.xlsx  GS_서울특별시_관악구.xlsx  (+65 more)
